@@ -23,7 +23,9 @@ exit( 0 ) unless( defined $session );
 my $path_info = $session->get_request->path_info;
 
 unless( $path_info =~ m!^/([0-9]+)(/([^/]*)?)?! ) {
-	error( $session, $session->make_text("Error: invalid export.") );
+	error( $session, $session->html_phrase( "cgi/export:no_id" ) );
+	$session->terminate;
+	exit;
 }
 
 my $id = $1;
@@ -32,7 +34,9 @@ my $format = $3;
 my $export_url = $session->get_archive->get_conf( "perl_url" )."/export";
 
 if( !defined $id ) {
-	error( $session, $session->make_text("No valid ID specified") );
+	error( $session, $session->html_phrase( "cgi/export:no_id" ) );
+	$session->terminate;
+	exit;
 }
 if( !defined $afterid ) {
 	$session->redirect( $export_url."/".$id."/" );
@@ -45,13 +49,21 @@ my $eprint = EPrints::EPrint->new(
 			$id, 
 			$session->get_archive->get_dataset( "archive" ) );
 if( !defined $eprint ) {
-	error( $session, $session->make_text("EPrint with $id is not in repository.") );
+	error( 
+		$session, 
+		$session->html_phrase( 
+			"cgi/export:eprint_not_fount",
+			eprintid => $session->make_text( $id ) ) );
+	$session->terminate;
+	exit;
 }
 
 if( !defined $format || $format eq "" ) {
-	my $title = $session->make_text("Export EPrint $id");
-	my $page= $session->make_doc_fragment;
-	$page->appendChild( render_export_links( $eprint, $export_url ) );
+	my $title = $session->html_phrase( "cgi/export:title",
+			shortname=>$eprint->render_description );
+	my $page = $session->html_phrase( "cgi/export:page",
+		citation => $eprint->render_citation_link,
+		formats => $eprint->render_export_links ); 
 	$session->build_page( $title, $page, "export" );
 	$session->send_page;
 	$session->terminate;
@@ -62,7 +74,10 @@ my @plugins = $session->plugin_list( can_accept=>"dataobj/eprint", is_visible=>"
 my $ok = 0;
 foreach( @plugins ) { if( $_ eq "output/$format" ) { $ok = 1; last; } }
 unless( $ok ) {
-	error( $session, $session->make_text("Format '$format' not available." ) );
+	error( $session, $session->html_phrase( "cgi/export:not_available",
+				format => $session->make_text( $format ) ) );
+	$session->terminate;
+	exit;
 }
 
 my $plugin = $session->plugin( "output/$format" );
@@ -77,35 +92,9 @@ sub error
 	my( $session, $msg ) = @_;
 
 	$session->build_page( 
-		$session->make_text( "Error in EPrint Export" ),
+		$session->html_phrase( "cgi/export:error_title" ),
 		$msg,
 		"export_error" );
 	$session->send_page;
-	$session->terminate;
-	exit;
 }
-
-# planned to move into EPrints::EPrint
-sub render_export_links
-{
-	my( $self ) = @_;
-
-	my $id = $self->get_value( "eprintid" );
-	my $ul = $self->{session}->make_element( "ul" );
-	my @plugins = $self->{session}->plugin_list( 
-					can_accept=>"dataobj/eprint", 
-					is_visible=>"all" );
-	foreach my $plugin_id ( @plugins ) {
-		my $li = $self->{session}->make_element( "li" );
-		my $plugin = $self->{session}->plugin( $plugin_id );
-		my $url = $plugin->call( "dataobj_export_url", $self );
-		my $a = $self->{session}->render_link( $url );
-		$a->appendChild( $plugin->call( "render_name" ) );
-		$li->appendChild( $a );
-		$ul->appendChild( $li );
-	}
-	return $ul;
-}
-
-
 
